@@ -2,7 +2,7 @@ require 'sinatra'
 require 'json'
 require 'ruby-debug'
 
-use Rack::Static, :urls => ["/javascript"], :root => File.expand_path('../..', settings.root)
+use Rack::Static, :urls => ['/javascript'], :root => File.expand_path('../..', settings.root)
 
 helpers do
   def jquery_link version
@@ -14,19 +14,29 @@ helpers do
   end
 
   def jquery_src
-    if params[:version] == 'edge' then "/vendor/jquery.js"
+    if params[:version] == 'edge' then '/vendor/jquery.js'
     else "http://code.jquery.com/jquery-#{params[:version]}.js"
     end
   end
 
   def test *names
-    names = ["/vendor/qunit.js", "settings"] + names
-    names.map { |name| script_tag name }.join("\n")
+    names.map { |name| script_tag name }.join('\n')
+  end
+
+  def test_base
+    names = ['/vendor/qunit.js', 'settings']
+    names.map { |name| script_tag name }.join('\n')
+  end
+
+  def test_validators
+    Dir.glob(File.expand_path('public/test/validators', settings.root) + '/*.js').map { |file| File.basename(file) }.map do |file|
+      script_tag "test/validators/#{file}"
+    end.join('\n')
   end
 
   def script_tag src
     src = "/test/#{src}.js" unless src.index('/')
-    %(<script src="#{src}" type="text/javascript"></script>)
+    %(<script src='#{src}' type='text/javascript'></script>)
   end
 end
 
@@ -35,30 +45,13 @@ get '/' do
   erb :index
 end
 
-[:get, :post, :put, :delete].each do |method|
-  send(method, '/echo') {
-    data = { :params => params }.update(request.env)
-
-    if request.xhr?
-      content_type 'application/json'
-      data.to_json
-    elsif params[:iframe]
-      payload = data.to_json.gsub('<', '&lt;').gsub('>', '&gt;')
-      <<-HTML
-        <script>
-          if (window.top && window.top !== window)
-            window.top.jQuery.event.trigger('iframe:loaded', #{payload})
-        </script>
-        <p>You shouldn't be seeing this. <a href="#{request.env['HTTP_REFERER']}">Go back</a></p>
-      HTML
-    else
-      content_type 'text/plain'
-      status 400
-      "ERROR: #{request.path} requested without ajax"
-    end
-  }
+get '/validators/uniqueness.json' do
+  content_type 'application/json'
+  status 200
+  if params[:case_sensitive] == 'false' && (params[:user][:email] || params[:users][:email]) == 'taken@test.com'
+    'false'
+  else
+    'true'
+  end
 end
 
-get '/error' do
-  status 403
-end
